--- a/MainDialog.ui
+++ b/MainDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>620</width>
-    <height>309</height>
+    <width>393</width>
+    <height>171</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -85,7 +85,7 @@
             <enum>Qt::NoFocus</enum>
            </property>
            <property name="text">
-            <string>Insert</string>
+            <string>Insert into text</string>
            </property>
           </widget>
          </item>
@@ -157,15 +157,15 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <item>
-        <layout class="QGridLayout" name="gridLayout">
-         <item row="0" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
           <widget class="QLabel" name="label_2">
            <property name="text">
             <string>Address</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item>
           <widget class="QLineEdit" name="lineEdit_osc_address">
            <property name="sizePolicy">
             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -175,14 +175,14 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="2">
+         <item>
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Port</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="3">
+         <item>
           <widget class="QLineEdit" name="lineEdit_osc_port">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -192,21 +192,25 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="4">
+         <item>
           <widget class="QPushButton" name="pushButton_osc_reset">
            <property name="text">
             <string>Reset</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
           <widget class="QLabel" name="label">
            <property name="text">
             <string>DeepL API Key</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1" colspan="4">
+         <item>
           <widget class="QLineEdit" name="lineEdit_deepl_api_key"/>
          </item>
         </layout>
@@ -240,9 +244,9 @@
           </spacer>
          </item>
          <item>
-          <widget class="QPushButton" name="pushButton_settings_apply">
+          <widget class="QPushButton" name="pushButton_settings_save">
            <property name="text">
-            <string>Apply</string>
+            <string>Save</string>
            </property>
           </widget>
          </item>
@@ -255,16 +259,16 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="leftMargin">
-      <number>9</number>
+      <number>6</number>
      </property>
      <property name="topMargin">
-      <number>9</number>
+      <number>6</number>
      </property>
      <property name="rightMargin">
-      <number>9</number>
+      <number>6</number>
      </property>
      <property name="bottomMargin">
-      <number>9</number>
+      <number>6</number>
      </property>
      <item>
       <widget class="QRadioButton" name="radioButton_ime_off">
@@ -343,7 +347,7 @@
   <tabstop>lineEdit_osc_port</tabstop>
   <tabstop>pushButton_osc_reset</tabstop>
   <tabstop>lineEdit_deepl_api_key</tabstop>
-  <tabstop>pushButton_settings_apply</tabstop>
+  <tabstop>pushButton_settings_save</tabstop>
  </tabstops>
  <resources/>
  <connections/>
