--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>image/check.png</file>
         <file>image/dots.png</file>
+        <file>image/OSC-ChatboxAssistant.svg</file>
+        <file>image/soramimi.jpg</file>
     </qresource>
 </RCC>
